# SimpleKernel

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  0___xE5_xB7_xA5_xE5_x85_xB7_xE9_x93_xBE_8md.html  1___xE7_xB3_xBB_xE7_xBB_x9F_xE5_x90_xAF_xE5_x8A_xA8_8md.html  CMakeLists.txt  CMakePresets.json  Clion_01_xE4_xBD_xBF_xE7_x94_xA8_xE8_xAF_xB4_xE6_x98_x8E_8md.html  Dockerfile  Git Commit 规范.md  LICENSE  Link.ld  Makefile  OVMF_X64.fd  README.md  README_8md.html  README_ENG.md  README_en.md  aarch64_2arch_8cpp.html  aarch64_2arch_8cpp.js  aarch64_2arch_8cpp__incl.map  aarch64_2arch_8cpp__incl.md5  aarch64_2arch_8cpp_source.html  annotated.html  annotated_dup.js  arch_8cpp.html  arch_8cpp.js  arch_8cpp__incl.map  arch_8cpp__incl.md5  arch_8cpp_source.html  arch_8h.html  arch_8h.js  arch_8h__dep__incl.map  arch_8h__dep__incl.md5  arch_8h__incl.map  arch_8h__incl.md5  arch_8h_source.html  bochsout.txt  (+360 more)
src/: CMakeLists.txt  Makefile  Makefile.env  Makefile.old  READMD.md  boot.s  kernel  kernel.c  kernel.kernel  link.ld  main.c  make.env  project_config.h
src/arch/: CMakeLists.txt  Makefile  README.md
src/arch/aarch64/: CMakeLists.txt  hardware.h  link.ld
src/arch/arm/: link.ld
src/arch/i386/: CMakeLists.txt  README.md  boot.s  clock.c  clock.h  cpu.hpp  cpu.hpp.gch  gdt.c  gdt.h  link.ld  port.hpp
src/arch/ia32/: CMakeLists.txt  cpu.hpp  e820.h
src/arch/raspi2/: CMakeLists.txt  hardware.h  link.ld  port.hpp
src/arch/riscv64/: CMakeLists.txt  context.S  context_switch.S  cpu.hpp  link.ld  memlayout.h
src/arch/x86_64/: CMakeLists.txt  Makefile  README.md  arch_init.c  cpu.hpp  hardware.h  link.ld  port.hpp  sync.hpp
src/boot/: CMakeLists.txt  README.md  boot.cpp  boot.s  graphics.cpp  load_elf.cpp  memory.cpp  ostream.cpp  out_stream.cpp
src/boot/aarch64/: link.ld
src/boot/include/: boot.h  load_elf.h  ostream.hpp  out_stream.hpp
src/boot/riscv64/: boot.S
src/boot/x86_64/: boot.cpp
src/cmake/: arch_detector.cmake  header_files.cmake  platform_detector.cmake  toolchain_linux_x86_64.cmake  toolchain_mac_x86_64.cmake
src/dev/: CMakeLists.txt  bus.cpp  bus_dev.cpp  dev.cpp
src/dev/include/: blk_dev.h  bus.h  bus_dev.h  dev.h
src/dev/platform_bus/: platform_bus_dev.cpp
src/dev/virtio/: virtio_blk_dev.cpp  virtio_bus_dev.cpp  virtio_dev.cpp
src/device/: CMakeLists.txt  bus_device.cpp  device_base.cpp
src/device/include/: bus_device.h  char_dev.h  device_base.h
src/device/virtio/: virtio_dev.cpp
src/drv/: CMakeLists.txt  README.md  driver_base.cpp  drv.cpp  mm.h
src/drv/8259A/: 8259A.c  8259A.cpp  CMakeLists.txt  Makefile1  README.md
src/drv/clock/: CMakeLists.txt  README.md  clock.c  clock.cpp
src/drv/console/: CMakeLists.txt  Makefile  Makefile1  README.md  console.c  console.cpp
src/drv/dtb/: dtb.cpp
src/drv/framebuffer/: CMakeLists.txt  framebuffer.c  framebuffer.cpp
src/drv/include/: driver_base.h  drv.h
src/drv/keyboard/: CMakeLists.txt  README.md  keyboard.c  keyboard.cpp
src/drv/mailbox/: CMakeLists.txt  mailbox.c  mailbox.cpp
src/drv/mouse/: CMakeLists.txt  README.md  mouse.c
src/drv/multiboot2/: multiboot2.cpp
src/drv/opensbi/: opensbi.cpp
src/drv/platform_bus/: platform_bus_drv.cpp
src/drv/sbi_console/: sbi_console.cpp
src/drv/tui/: tui.cpp
src/drv/uart/: CMakeLists.txt  uart.c  uart.cpp
src/drv/vga/: CMakeLists.txt  Makefile  Makefile1  README.md  vga.c  vga.cpp
src/drv/virtio/: packed_virtqueue.cpp  split_virtqueue.cpp  virtio.cpp  virtio_blk.cpp  virtio_bus.cpp  virtio_bus_drv.cpp  virtio_mmio_bus_drv.cpp  virtio_mmio_drv.cpp  virtio_mmio_intr.cpp  virtio_queue.cpp  virtio_scsi.cpp
src/ds_alg/: CMakeLists.txt  LinkedList.c  Makefile  README.md
src/ds_alg/include/: alg.h  datastructure.h  linkedlist.h
src/fs/: CMakeLists.txt
src/fs/fat32/: CMakeLists.txt  fat32.cpp  fat32.h
src/fs/fatfs/: diskio.c  diskio.cpp  fatfs.cpp  ff.c  ff.cpp  ffsystem.c  ffsystem.cpp  ffunicode.c  ffunicode.cpp
src/fs/ramfs/: CMakeLists.txt  ramfs.cpp  ramfs.h
src/gnu-efi/: Make.rules  README.gnuefi
src/gnu-efi/gnuefi/: reloc_x86_64.c
src/gnu-efi/inc/: efiapi.h  efidebug.h  efistdarg.h
src/gnu-efi/lib/: hw.c
src/include/: Makefile  README.md  arch_init.h  boot_info.h  boot_info.hpp  buf.h  bus.h  char_dev.h  clock.h  color.h  common.h  console.hpp  core.h  core.hpp  cpu.hpp  debug.h  dev.h  dev_drv_manager.h  drv.h  dtb.h  elf.h  elf64.h  graphic.h  headers.h  heap.c  heap.h  io.h  io.hpp  kernel.h  multiboot.h  multiboot2.c  multiboot2.h  pic.h  pic.hpp  port.h  port.hpp  resource.h  smp_task.h  spinlock.h  stdinclude.h  (+7 more)
src/include/DataStructuer/: BinarySearchTree.cpp  DataStructuer.h
src/include/DataStructure/: DataStructure.h  LinkedList.c  LinkedList.cpp  Queue.cpp  SortAlgorithm.cpp  Stack.cpp
src/include/drv/: keyboard.h  mouse.h  mouse.h.gch
src/include/mm/: mm.h  (+5 more)
src/io/: CMakeLists.txt  READMD.md
src/kernel/: CMakeLists.txt  Makefile  Makefile1  README.md  allocator.cpp  arch_init.c  bus.cpp  cfs_scheduler.cpp  core.cpp  dev.cpp  dev_drv_manager.cpp  drv.cpp  dtb.cpp  elf.c  fifo_scheduler.cpp  first_fit.cpp  firstfit.cpp  heap.c  heap.cpp  init.c  io.cpp  kernel.c  kernel.cpp  kernel_main.cpp  link.ld  main.cpp  multiboot2.c  multiboot2.cpp  pmm.cpp  printk.c  reloc_x86_64.c  rr_scheduler.cpp  scheduler.cpp  slab.cpp  smp_task.cpp  spinlock.cpp  test.cpp  tmp_scheduler.cpp  vfs.cpp  virtio_disk.cpp  (+2 more)
src/libc/: CMakeLists.txt  Makefile  README.md  assert.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  types.h
src/libc++/: CMakeLists.txt  README.md  cxxabi.cpp
src/libcxx/: CMakeLists.txt  README.md  __dso_handle.S  cxxabi.cpp
src/test/: CMakeLists.txt  READMD.md  test.c  test.cpp  test.h
test/: CMakeLists.txt
test/integration_test/: CMakeLists.txt  example.cpp
test/system_test/: CMakeLists.txt
test/unit_test/: CMakeLists.txt  README.md  aarch64_cpu_test.cpp  example.cpp  kernel.elf  kernel.elf.h  kernel_elf_test.cpp  kernel_fdt_test.cpp  riscv64_cpu_test.cpp  riscv64_virt.dtb  riscv64_virt.dtb.h  riscv64_virt.dts  x86_64_cpu_test.cpp
(+1266 files in other folders)
